--- a/style.css
+++ b/style.css
@@ -6,6 +6,6 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100%;
-  font-family: 'Source Sans Pro';
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
 }
